[package]
name = "procedural_dungeon"
version = "0.1.0"
authors = ["Dylan Halperin <dylan@dylemma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crow = "0.7.1"
num = "0.2.1"
pathfinding = "2.0.4"
rand = "0.7.3"
unordered-pair = "0.2.2"