[package]
name = "procedural_dungeon"
version = "0.1.0"
authors = ["Dylan Halperin <dylan@dylemma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crow = "0.7.1"
nalgebra = "0.20.0"
ncollide2d = "0.22.0"
nphysics2d = "0.14.0"
num = "0.2.1"
pathfinding = "2.0.4"
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
rand = "0.7.3"
unordered-pair = "0.2.2"
vecmath = "1.0.0"