[package]
name = "procedural_dungeon"
version = "0.2.0"
authors = ["Dylan Halperin <dylan@dylemma.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://bevyengine.org/learn/book/getting-started/setup/ recommends "dynamic" feature for dev, but not release
bevy = { version = "0.9.1", features = ["dynamic"] }
noise_lib = { version = "0.7.0", package = "noise" }
parry2d = "0.13.0"
pathfinding = "4.2.1"
rand = "0.8.5"
unordered-pair = "0.2.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3